<resources>
    <string name="app_name">Task Manager</string>

    <string name="status_text" translatable="false">Status</string>
    <string name="action_search_title" translatable="false">Search</string>
    <string name="action_save_task" translatable="false">Save</string>
    <string name="status_wip" translatable="false">WIP</string>
    <string name="status_todo" translatable="false">TODO</string>
    <string name="status_declined" translatable="false">DECLINED</string>
    <string name="status_none" translatable="false">NONE</string>
    <string name="status_review" translatable="false">REVIEW</string>
    <string name="task_title_hint">Task title</string>
    <string name="task_description_hint">Task description</string>
    <string name="action_sort_title">Sort</string>
    <string name="action_sort_by_name_title">Sort by name</string>
    <string name="action_sort_by_date_title">Sort by date</string>
    <string name="action_sort_by_creator_name_title">Sort by creator name</string>
    <string name="action_sort_by_priority_title">Sort by priority</string>
    <string name="action_hide_completed_title">Hide completed</string>
    <string name="action_delete_all_completed_title">Delete all completed</string>
    <string name="task_deleted_message">Task deleted</string>
    <string name="task_saved_message">Task saved</string>
    <string name="undo_upper_text">UNDO</string>
    <string name="task_title_text">Task</string>
</resources>