<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:icon="@drawable/ic_sort"
        android:title="@string/action_sort_title"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_sort_by_name"
                android:title="@string/action_sort_by_name_title" />

            <item
                android:id="@+id/action_sort_by_date"
                android:title="@string/action_sort_by_date_title" />

            <item
                android:id="@+id/action_sort_by_creator_name"
                android:title="@string/action_sort_by_creator_name_title" />

            <item
                android:id="@+id/action_sort_by_priority"
                android:title="@string/action_sort_by_priority_title" />

        </menu>

    </item>

    <item
        android:id="@+id/action_hide_completed_tasks"
        android:checkable="true"
        android:title="@string/action_hide_completed_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all_completed_tasks"
        android:title="@string/action_delete_all_completed_title"
        app:showAsAction="never" />

</menu>